Write to netcdf as intermediate step

--- a/natural-conversion/Dockerfile
+++ b/natural-conversion/Dockerfile
@@ -2,52 +2,34 @@ FROM osgeo/gdal:ubuntu-full-3.4.0
 MAINTAINER Alex Zvoleff azvoleff@conservation.org
 
 RUN apt-get update && \
-    apt-get install -yq locales python3-boto3 python3-pip \
+    apt-get install -y software-properties-common && \
+    rm -rf /var/lib/apt/lists/* && \
+    add-apt-repository -r ppa:ubuntugis/ppa && \
+    apt-get update
+
+RUN apt-get install -yq locales python3-boto3 python3-pip \
         apt-transport-https ca-certificates gnupg git && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*  && \
-    mkdir -p /work
-
-RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" \
-        | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
-    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
-        apt-key --keyring /usr/share/keyrings/cloud.google.gpg  add - && \
-    apt-get update -y && apt-get install google-cloud-sdk -y
+    apt-get install python-numpy gdal-bin libgdal-dev libpq-dev -y
 
 RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
     locale-gen
 ENV LANG en_US.UTF-8  ENV LANGUAGE en_US:en  ENV LC_ALL en_US.UTF-8
 ENV RESET_BUILD df
 
-RUN chown $USER:$USER /work
+RUN pip3 install numpy --upgrade
+RUN pip3 install rioxarray netcdf4 "dask>=2022.2.1[complete]" bokeh>=2.1.1 openpyxl \
+    bottleneck geocube rollbar psutil --upgrade
+RUN pip3 install numba
 
-RUN pip3 install 'Numpy==1.19'
-RUN git clone https://github.com/monocongo/climate_indices /work/climate_indices
-RUN cd /work/climate_indices && \
-	python setup.py install
-
-RUN apt-get update -y && apt-get install -y \
-    python3-xarray \
-    python3-rasterio
-RUN pip3 install rioxarray
-RUN pip3 install netcdf4
-RUN pip3 install rollbar
-RUN python -m pip install "dask>=2022.2.1[distributed]" --upgrade
-RUN pip3 install bokeh>=2.1.1
-RUN pip3 install openpyxl
-RUN pip3 install bottleneck --upgrade
-
-RUN apt-get install -y libpq-dev
-RUN pip3 install geocube
-
-RUN pip3 install 'google-cloud-storage'
+RUN mkdir -p /work && \
+    chown $USER:$USER /work
 
 ADD data /data
 
 RUN mkdir ~/.aws && \
     mv /data/aws_credentials ~/.aws/credentials && \
     mv /data/aws_config ~/.aws/config
-RUN gcloud auth activate-service-account --key-file=/data/gcs_credentials.json
 
 # Below is needed to ensure keys with dots in them can be handled from S3
 RUN echo "[s3]" >> ~/.boto && \
@@ -59,6 +41,8 @@ ADD esa_cci_transitions.py /work/esa_cci_transitions.py
 ADD natural_conversion.py /work/natural_conversion.py
 ADD parallel_functions.py /work/parallel_functions.py
 ADD ESA_CCI_Natural_Conversion_Coding_v2.xlsx /work/ESA_CCI_Natural_Conversion_Coding_v2.xlsx
+
+#ENV MALLOC_TRIM_THRESHOLD_=0
 
 # dask dashboard
 EXPOSE 8787
